<resources>
    <string name="app_name">Brasov Guide</string>
    <string name="action_settings">Settings</string>
    <string name="menu_info">Info</string>
    <string name="btn_signin">Sign In</string>
    <string name="btn_register">Register</string>
    <string name="app_prefs">Set your app version prefs</string>
    <string name="signin">Sign in to BrasovGuide</string>
    <string name="username_hint">username</string>
    <string name="password_hint">password</string>
    <string name="regiter_form">Register New Account</string>
    <string name="firstname_hint">First Name</string>
    <string name="lastname_hint">Last Name</string>
    <string name="email_hint">Email</string>
    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>
    <string name="terms">I agree to the terms and conditions and the privacy policy</string>
    <string name="signup">Sign Up</string>
    <string name="tv_welcome">Welcome,</string>
    <string name="landmarks_collection">View your visited landmarks</string>
    <string name="landmarks">View all landmarks</string>
    <string name="add_landmark">Add landmark</string>
    <string name="sign_out">Sign Out</string>
    <string name="delete_account">Delete account</string>
    <string name="change_password">Change password</string>
    <string name="hint_new_password">Enter your new password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="add_form">Add a landmark</string>
    <string name="hint_name_landmark">Name landmark</string>
    <string name="hint_location_landmark">Location landmark</string>
    <string name="type_landmark">Please choose the landmark\'s type:</string>

    <string-array name="type_landmark">
        <item>History</item>
        <item>Culture</item>
        <item>Nature</item>
        <item>Ecotourism</item>
        <item>Event</item>
    </string-array>

    <string name="rating_landmark">Rate the landmark if you have visited it:</string>
    <string name="save_landmark">Save</string>
    <string name="all_landmarks">Landmarks</string>
    <string name="visited_landmarks">Visited landmarks</string>
    <string name="save_to_txt">Save to .txt</string>
</resources>