<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:background="@color/greenish"
    android:fillViewport="false"
    android:orientation="vertical"
    tools:context=".UI.ProfileActivity">

    <LinearLayout
        android:id="@+id/layout4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/tv_welcome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="20dp"
            android:text="@string/tv_welcome"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Display2"
            android:textColor="@color/blackish"
            android:textSize="15sp"/>

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginBottom="15dp"
            android:layout_marginTop="30dp"
            android:src="@drawable/travel" />

        <Button
            android:id="@+id/btn_view_landmarks"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="15dp"
            android:background="@color/whiteish"
            android:text="@string/landmarks"
            android:textColor="@color/blackish"
            android:textSize="15sp"
            android:textStyle="bold"
            android:textAlignment="center" />

        <Button
            android:id="@+id/btn_saved_landmarks"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="15dp"
            android:background="@color/whiteish"
            android:text="@string/landmarks_collection"
            android:textColor="@color/blackish"
            android:textSize="15sp"
            android:textStyle="bold"
            android:textAlignment="center" />

        <Button
            android:id="@+id/btn_add_landmark"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="15dp"
            android:background="@color/whiteish"
            android:text="@string/add_landmark"
            android:textColor="@color/blackish"
            android:textSize="15sp"
            android:textStyle="bold"
            android:textAlignment="center" />

        <Button
            android:id="@+id/btn_sign_out"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="15dp"
            android:background="@color/whiteish"
            android:text="@string/sign_out"
            android:textColor="@color/blackish"
            android:textSize="15sp"
            android:textStyle="bold"
            android:textAlignment="center" />

        <Button
            android:id="@+id/btn_delete_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="15dp"
            android:background="@color/whiteish"
            android:text="@string/delete_account"
            android:textColor="@color/blackish"
            android:textSize="15sp"
            android:textStyle="bold"
            android:textAlignment="center" />

        <Button
            android:id="@+id/btn_change_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="15dp"
            android:background="@color/whiteish"
            android:text="@string/change_password"
            android:textColor="@color/blackish"
            android:textSize="15sp"
            android:textStyle="bold"
            android:textAlignment="center" />

        <EditText
            android:id="@+id/et_new_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:ellipsize="end"
            android:hint="@string/hint_new_password"
            android:inputType="textPassword"
            android:maxLines="1"
            android:padding="10dp"
            android:textAlignment="center"
            android:textColor="@color/blackish"
            android:textColorHint="@color/blackish"
            android:visibility="invisible" />

        <Button
            android:id="@+id/btn_confirm_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="15dp"
            android:background="@color/whiteish"
            android:text="@string/confirm_password"
            android:visibility="invisible"
            android:textColor="@color/blackish"
            android:textSize="15sp"
            android:textStyle="bold"
            android:textAlignment="center" />

    </LinearLayout>

</ScrollView>