<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/greenish"
    android:fillViewport="false"
    android:orientation="vertical"
    tools:context=".UI.SignInActivity">

    <LinearLayout
        android:id="@+id/layout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:layout_marginBottom="15dp"
            android:layout_marginTop="30dp"
            android:src="@drawable/travel" />

        <TextView
            android:id="@+id/tv_signin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/signin"
            android:textAlignment="center"
            android:textColor="@color/titleColor"
            android:textSize="25sp"
            android:textStyle="bold"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="30dp" />

        <EditText
            android:id="@+id/et_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:ellipsize="end"
            android:hint="@string/username_hint"
            android:inputType="text"
            android:padding="10dp"
            android:maxLines="1"
            android:textAlignment="center"
            android:textColor="@color/blackish"
            android:textColorHint="@color/blackish" />

        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:ellipsize="end"
            android:hint="@string/password_hint"
            android:inputType="textPassword"
            android:padding="10dp"
            android:maxLines="1"
            android:textAlignment="center"
            android:textColor="@color/blackish"
            android:textColorHint="@color/blackish" />

        <Button
            android:id="@+id/btn_sign_in"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:background="@color/whiteish"
            android:padding="10dp"
            android:text="@string/signin"
            android:textAlignment="center"
            android:textColor="@color/blackish"
            android:textSize="15dp"
            android:textStyle="bold" />

    </LinearLayout>

</ScrollView>